--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perspective</title>
+  <title>Home</title>
 </head>
 <body>
-  Hello!!!
+  Home | <a href="./react/index.html">React</a>
 </body>
 </html>
