--- a/react/index.html
+++ b/react/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React Applications</title>
+  <title>React</title>
 </head>
 <body>
-  <h1>React Apps</h1>
+  <a href="../index.html">Home</a> | React
 </body>
 </html>
