--- a/test.html
+++ b/test.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Document</title>
 </head>
 <body>
-  Home | <a href="./test.html">Test</a>
-  <img src="./images/favicon-32x32.png"/>
+  Test
 </body>
 </html>
