--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Home</title>
 </head>
 <body>
-  Home | <a href="./test.html">Test</a>
+  aHome | <a href="./test.html">Test</a>
   <img src="./images/favicon-32x32.png"/>
 </body>
 </html>
