--- a/webdev/index.html
+++ b/webdev/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React</title>
+  <title>Yo</title>
 </head>
 <body>
-  <a href="../index.html">Home</a> | React
+  Hello
 </body>
 </html>
