--- a/aws-apps/index.html
+++ b/aws-apps/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yo</title>
+  <title>AWS</title>
 </head>
 <body>
-  Hello
+  <h1>AWS Apps</h1>
+  <hr>
+  <a href="../index.html">Home</a> | React Apps | <a href="../wd-apps/index.html">Webdev Apps</a>
 </body>
 </html>
