--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Home</title>
 </head>
 <body>
-  aHome | <a href="./test.html">Test</a>
-  <img src="./images/favicon-32x32.png"/>
-  <a href="./webdev/index.html">Yo</a>
+  <h1>Home</h1>
+  <hr>
+  Home | <a href="./aws-apps/index.html">AWS Apps</a> | <a href="./wd-apps/index.html">WD Apps</a>
 </body>
 </html>
