--- a/wd-apps/index.html
+++ b/wd-apps/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>WD</title>
 </head>
 <body>
-  Test
+  <h1>WD Apps</h1>
+  <hr>
+  <a href="../index.html">Home</a> | <a href="../aws-apps/index.html">AWS Apps</a> | WD apps
 </body>
 </html>
