--- a/aws-apps/index.html
+++ b/aws-apps/index.html
@@ -8,6 +8,11 @@
 <body>
   <h1>AWS Apps</h1>
   <hr>
+  <ul>
+    <li>
+      <a href="./medals-radix-01/index.html">Medals Radix 01</a>
+    </li>
+  </ul>
   <a href="../index.html">Home</a> | React Apps | <a href="../wd-apps/index.html">Webdev Apps</a>
 </body>
 </html>
