--- a/aws-apps/index.html
+++ b/aws-apps/index.html
@@ -13,6 +13,6 @@
       <a href="./medals-radix-01/index.html">Medals Radix 01</a>
     </li>
   </ul>
-  <a href="../index.html">Home</a> | React Apps | <a href="../wd-apps/index.html">Webdev Apps</a>
+  <a href="../index.html">Home</a> | AWS Apps | <a href="../wd-apps/index.html">Webdev Apps</a>
 </body>
 </html>
