--- a/wd-apps/index.html
+++ b/wd-apps/index.html
@@ -9,5 +9,17 @@
   <h1>WD Apps</h1>
   <hr>
   <a href="../index.html">Home</a> | <a href="../aws-apps/index.html">AWS Apps</a> | WD apps
+  <hr>
+  <ul></ul>
+    <li>
+      <a href="./northwind-client-01/index.html">Northwind Client 01</a>
+    </li>
+    <li>
+      <a href="./northwind-client-02/index.html">Northwind Client 02</a>
+    </li>
+    <li></li>
+      <a href="./northwind-client-03/index.html">Northwind Client 03</a>
+    </li>
+  </ul>
 </body>
 </html>
