--- a/aws-apps/index.html
+++ b/aws-apps/index.html
@@ -12,6 +12,9 @@
   <hr>
   <ul>
     <li>
+      <a href="./medals-01/index.html">Medals 01</a>
+    </li>
+    <li>
       <a href="./medals-radix-01/index.html">Medals Radix 01</a>
     </li>
   </ul>
