--- a/aws-apps/index.html
+++ b/aws-apps/index.html
@@ -14,6 +14,9 @@
     <li>
       <a href="./medals-01/index.html">Medals 01</a>
     </li>
+    <li></li>
+      <a href="./medals-02/index.html">Medals 02</a>
+    </li>
     <li>
       <a href="./medals-radix-01/index.html">Medals Radix 01</a>
     </li>
