--- a/aws-apps/index.html
+++ b/aws-apps/index.html
@@ -20,6 +20,9 @@
     <li>
       <a href="./medals-radix-01/index.html">Medals Radix 01</a>
     </li>
+    <li>
+      <a href="./medals-radix-02/index.html">Medals Radix 02</a>
+    </li>
   </ul>
 </body>
 </html>
