--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <a href="./aws-apps/nugatory-01/index.html">Nugatory 01</a>
     </li>
     <li>
+      <a href="./aws-apps/nugatory-02/index.html">Nugatory 02</a>
+    </li>
+    <li>
       <a href="./aws-apps/medals-01/index.html">Medals 01</a>
     </li>
     <li>
