--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <h1>AWS Apps</h1>
   <ul>
     <li>
+      <a href="./aws-apps/fun/index.html">Nugatory fun</a>
+    </li>
+    <li>
       <a href="./aws-apps/nugatory-01/index.html">Nugatory 01</a>
     </li>
     <li>
