--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AWS</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AWS</title>
-</head>
-
-<body>
-  <h1>AWS Apps</h1>
-  <ul>
-    <li>
-      <a href="./aws-apps/fun/index.html">Nugatory fun</a>
-    </li>
-    <li>
-      <a href="./aws-apps/nugatory-01/index.html">Nugatory 01</a>
-    </li>
-    <li>
-      <a href="./aws-apps/nugatory-02/index.html">Nugatory 02</a>
-    </li>
-    <li>
-      <a href="./aws-apps/medals-01/index.html">Medals 01</a>
-    </li>
-    <li>
-      <a href="./aws-apps/medals-02/index.html">Medals 02</a>
-    </li>
-    <li>
-      <a href="./aws-apps/medals-radix-01/index.html">Medals Radix 01</a>
-    </li>
-    <li>
-      <a href="./aws-apps/medals-radix-02/index.html">Medals Radix 02</a>
-    </li>
-  </ul>
-  <hr>
-  <h1>WD Apps</h1>
-  <ul>
-    <li>
-      <a href="./wd-apps/northwind-client-01/index.html">Northwind Client 01</a>
-    </li>
-    <li>
-      <a href="./wd-apps/northwind-client-02/index.html">Northwind Client 02</a>
-    </li>
-    <li>
-      <a href="./wd-apps/northwind-client-03/balloons.html">Northwind Client 03 (balloons)</a>
-    </li>
-  </ul>
-</body>
-
+  <body>
+    <h1>AWS Apps</h1>
+    <ul>
+      <li>
+        <a href="./aws-apps/nugatory-01/index.html">Nugatory 01</a>
+      </li>
+      <li>
+        <a href="./aws-apps/nugatory-02/index.html">Nugatory 02</a>
+      </li>
+      <li>
+        <a href="./aws-apps/medals-01/index.html">Medals 01</a>
+      </li>
+      <li>
+        <a href="./aws-apps/medals-02/index.html">Medals 02</a>
+      </li>
+      <li>
+        <a href="./aws-apps/medals-radix-01/index.html">Medals Radix 01</a>
+      </li>
+      <li>
+        <a href="./aws-apps/medals-radix-02/index.html">Medals Radix 02</a>
+      </li>
+    </ul>
+    <hr />
+    <h1>WD Apps</h1>
+    <ul>
+      <li>
+        <a href="./wd-apps/northwind-client-01/index.html"
+          >Northwind Client 01</a
+        >
+      </li>
+      <li>
+        <a href="./wd-apps/northwind-client-02/index.html"
+          >Northwind Client 02</a
+        >
+      </li>
+      <li>
+        <a href="./wd-apps/northwind-client-03/balloons.html"
+          >Northwind Client 03 (balloons)</a
+        >
+      </li>
+    </ul>
+  </body>
 </html>
