--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <a href="./aws-apps/nugatory-02/index.html">Nugatory 02</a>
       </li>
       <li>
+        <a href="./aws-apps/nugatory-03/index.html">Nugatory 03</a>
+      </li>
+      <li>
         <a href="./aws-apps/medals-01/index.html">Medals 01</a>
       </li>
       <li>
