--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <li>
         <a href="./aws-apps/medals-radix-02/index.html">Medals Radix 02</a>
       </li>
+      <li>
+        <a href="./aws-apps/medals-radix-03/index.html">Medals Radix 03</a>
+      </li>
     </ul>
     <hr />
     <h1>WD Apps</h1>
