--- a/aws-apps/nugatory-dialog/index.html
+++ b/aws-apps/nugatory-dialog/index.html
@@ -7,7 +7,6 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nugatory</title>
-    <link rel="stylesheet" type="text/css" href="NewWord.css" />
     <style type="text/css">
       :root {
         --main-bg-color: #242424;
@@ -15,11 +14,12 @@
         --white-color: #e2e2e2;
         --button-color: #5e5e5e;
         background-color: var(--main-bg-color);
-        color: var(--word-color);
+        color: var(--main-color);
         font-family: "Luckiest Guy", cursive;
         font-size: 12pt;
       }
     </style>
+    <link rel="stylesheet" type="text/css" href="NewWord.css" />
   </head>
   <body>
     <div id="overlay"></div>
