--- a/aws-apps/nugatory-dialog/index.html
+++ b/aws-apps/nugatory-dialog/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Teko:wght@300..700&display=swap");
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nugatory</title>
@@ -13,10 +13,10 @@
         --main-color: #242424f8;
         --white-color: #e2e2e2;
         --button-color: #5e5e5e;
-        background-color: var(--main-bg-color);
+
+        font: 12pt "Luckiest Guy";
         color: var(--main-color);
-        font-family: "Luckiest Guy", cursive;
-        font-size: 12pt;
+        background-color: var(--main-bg-color);
       }
     </style>
     <link rel="stylesheet" type="text/css" href="NewWord.css" />
@@ -24,7 +24,12 @@
   <body>
     <div id="overlay"></div>
     <div id="dialog">
-      <div id="word-display">new word</div>
+      <div
+        id="word-display"
+        style="text-shadow: 0 0 0.25rem rgb(255, 255, 255)"
+      >
+        new word
+      </div>
       <div class="color-div">
         <div
           class="color-square"
@@ -50,7 +55,12 @@
         <div class="value">255</div>
       </div>
       <div>
-        <input type="text" id="new-word" placeholder="new word" />
+        <input
+          type="text"
+          id="new-word"
+          placeholder="new word"
+          maxlength="16"
+        />
       </div>
       <div>
         <button type="submit">save</button>
