--- a/aws-apps/nugatory-dialog/index.html
+++ b/aws-apps/nugatory-dialog/index.html
@@ -14,9 +14,13 @@
         --white-color: #e2e2e2;
         --button-color: #5e5e5e;
 
-        font: 12pt "Luckiest Guy";
+        font: 12pt "Luckiest Guy", cursive;
         color: var(--main-color);
         background-color: var(--main-bg-color);
+      }
+      * {
+        margin: 0;
+        padding: 0;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="NewWord.css" />
