--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <li>
         <a href="./aws-apps/medals-radix-03/index.html">Medals Radix 03</a>
       </li>
+      <li>
+        <a href="./aws-apps/medals-radix-04/index.html">Medals Radix 04</a>
+      </li>
     </ul>
     <hr />
     <h1>WD Apps</h1>
