--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <li>
         <a href="./aws-apps/medals-radix-04/index.html">Medals Radix 04</a>
       </li>
+      <li>
+        <a href="./aws-apps/medals-radix-05/index.html">Medals Radix 05</a>
+      </li>
     </ul>
     <hr />
     <h1>WD Apps</h1>
