--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       <li>
         <a href="./aws-apps/medals-radix-05/index.html">Medals Radix 05</a>
       </li>
+      <li>
+        <a href="./aws-apps/react-router/">React Router</a>
+      </li>
     </ul>
     <hr />
     <h1>WD Apps</h1>
