nugatory dialog design

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <a href="./aws-apps/nugatory-03/index.html">Nugatory 03</a>
       </li>
       <li>
-        <a href="./aws-apps/nugatory-dialog/index.html">Nugatory dialog</a>
+        <a href="./aws-apps/nugatory-dialog-design/index.html"
+          >Nugatory dialog design</a
+        >
       </li>
       <li>
         <a href="./aws-apps/nugatory-04/index.html">Nugatory 04</a>
