--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <a href="./aws-apps/medals-radix-05/index.html">Medals Radix 05</a>
       </li>
       <li>
+        <a href="./aws-apps/medals-radix-06/index.html">Medals Radix 06</a>
+      </li>
+      <li>
         <a href="./aws-apps/react-router/">React Router</a>
       </li>
     </ul>
